[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Objects/Button.gd" type="Script" id=1]
[ext_resource path="res://assets/objects/buttonIndicator.png" type="Texture" id=2]
[ext_resource path="res://assets/objects/button.png" type="Texture" id=3]
[ext_resource path="res://assets/smolLight.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/staticButton.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 3 )

[node name="Button" type="Node2D" groups=[
"reset",
]]
script = ExtResource( 1 )

[node name="Indicator" type="Sprite" parent="."]
position = Vector2( 0, -16 )
z_index = 1
texture = ExtResource( 2 )
centered = false
hframes = 3

[node name="Button" type="Sprite" parent="."]
z_index = 3
texture = ExtResource( 3 )
centered = false
hframes = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 16, 12 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 16, 8 )
polygon = PoolVector2Array( -14, 8, -10, 6, 0, 6, 0, 6, 10, 6, 14, 8, -14, 8 )

[node name="Light2D" type="Light2D" parent="." groups=[
"light",
]]
position = Vector2( 27, -11 )
texture = ExtResource( 4 )
color = Color( 1, 0.101961, 0.0352941, 1 )
energy = 0.1

[node name="SndStaticButton" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0
bus = "Sound"
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered" flags=3]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited" flags=3]
